Config controller,services & it's methods added.CardType & transtype card list added.
